force-app/main/default/objects/Employee__c/fields/Emp_id__c.field-meta.xml
<CustomField>
    <fullName>Emp_id__c</fullName>
    <displayFormat>Emp-{00000}</displayFormat>
    <label>Emp_id</label>
    <type>AutoNumber</type>
</CustomField>