force-app/main/default/objects/Employee__c/fields/Time_Active__c.field-meta.xml
<CustomField>
    <fullName>Time_Active__c</fullName>
    <formula>(Logout_Time__c  -  Login_Time__c) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>