force-app/main/default/objects/Employee__c/validationRules/Mobile_Number_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NOT(
 OR(
BEGINS( Mobile_No__c ,&apos;9&apos;),
BEGINS( Mobile_No__c ,&apos;8&apos;),
BEGINS( Mobile_No__c ,&apos;7&apos;),
BEGINS( Mobile_No__c ,&apos;6&apos;)
) 
),
LEN( Mobile_No__c ) &lt;&gt; 10
)</errorConditionFormula>
    <errorDisplayField>Mobile_No__c</errorDisplayField>
    <errorMessage>Mobile Number must be 10 digit and start with 9,7,8,6</errorMessage>
</ValidationRule>